syntax = "proto3";
package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/EviL345/pet/database/pkg/api;api";

service api{
  rpc getList(GetListRequest) returns (GetListResponse);
  rpc createTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc doneTask(DoneTaskRequest) returns (google.protobuf.Empty);
  rpc deleteTask(DeleteTaskRequest) returns (google.protobuf.Empty);
}

message GetListRequest {
  int64 id = 1;
}

message Task {
  int64 id = 1;
  string title = 2;
  string text = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  bool done = 6;
}

message GetListResponse {
  repeated Task tasks = 1;
}

message CreateTaskRequest {
  string title = 1;
  string text = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateTaskResponse {
  int64 id = 1;
}

message DoneTaskRequest {
  int64 id = 1;
}

message DeleteTaskRequest {
  int64 id = 1;
}